--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ ipython = "^8.27.0"
 pytils = "^0.4.1"
 django = "4.2.2"
 python-dotenv = "^1.0.1"
+gunicorn = "*"
+django-redis = "*"
 
 
 [build-system]
