--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,9 @@ services:
       - ./.env
 
   redis:
-    image:redis:7
+    image: redis:7
     volumes:
-      - redis_data:/data env_file:
+      - redis_data:/data
     env_file:
       - ./.env
 
