--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   web:
     build: .
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
     command: sh -c "python manage.py collectstatic --noinput && gunicorn config.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - .:/app
@@ -18,7 +20,7 @@ services:
       context: ./nginx
     ports:
       - "80:80"
-    voLumes:
+    volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - static_volume:/app/staticfiles
     depends_on:
@@ -41,4 +43,4 @@ services:
 volumes:
   postgres_data:
   static_volume:
-  redis_volume:
+  redis_data:
